# PythonWebCourse

CW_Web_11_rest/: pyproject.toml
CW_Web_11_rest/src/database/: db.py
CW_Web_11_rest/src/repository/: notes.py  tags.py
CW_Web_11_rest/src/routes/: notes.py  tags.py
CW_Web_11_rest_cats/: main.py  pyproject.toml
CW_Web_11_rest_cats/migrations/: env.py
CW_Web_11_rest_cats/src/conf/: config.ini
HW_Web_1/modul_1/: data.txt  hw_1_serialized_classes.py  hw_2_metaclass.py
HW_Web_1/modul_1_1/: pyproject.toml
HW_Web_1/modul_2/: pyproject.toml
HW_Web_1/modul_2/assistant_bot/: console.py  functions.py  main.py  saveload.py
HW_Web_1/modul_2/assistant_bot/fields/: __init__.py  birthday.py  notes.py  phone.py
HW_Web_1/pa-docker/: Dockerfile
HW_Web_1/pa-docker/HW_Web_2/: requirements.txt
HW_Web_1/pa-docker/assistant_bot/: addressbook.py  record.py
HW_Web_10_Django/: .gitignore  README.md
HW_Web_10_Django/notes/noteapp/: urls.py  views.py
HW_Web_10_Django/notes/notes/: settings.py
HW_Web_10_Django/quotepages/quotepages/: settings.py
HW_Web_11_FastAPI/: .gitignore  README.md  pyproject.toml  reqirements.txt
HW_Web_11_FastAPI/migrations/versions/: 3237fbcf82f2_init.py  345863a8e6aa_init.py  4f84b5eb7471_init.py  652139b805c1_init.py
HW_Web_11_FastAPI/src/repository/: contacts.py  search.py
HW_Web_11_FastAPI/src/routes/: contacts.py
HW_Web_12_FastAPI_JWT/: README.md  main.py  pyproject.toml
HW_Web_12_FastAPI_JWT/migrations/: env.py
HW_Web_12_FastAPI_JWT/migrations/versions/: 18b1a3d69e80_reset_old.py  8b30586b7333_init.py  a035344fd005_init.py  aaac57659e56_update_role.py  aad8b063ef43_add_user.py  aed5c60b0757_init.py  cddbc8b163cd_init.py  d98713d25e0f_init.py  e7009f37dd17_fix_roles.py  f0015925231b_add_role.py
HW_Web_12_FastAPI_JWT/src/: schemas.py
HW_Web_12_FastAPI_JWT/src/routes/: auth.py  contacts.py
HW_Web_12_FastAPI_JWT/src/services/: auth.py
HW_Web_13_Reset_password_Django/: .gitignore  Dockerfile  README.md  pyproject.toml
HW_Web_13_Reset_password_Django/quotepages/quoteapp/: forms.py
HW_Web_13_Reset_password_Django/quotepages/quotepages/: settings.py
HW_Web_13_Reset_password_FastAPI/postgres-data/global/: pg_control  pg_internal.init
HW_Web_13_Reset_password_FastAPI/postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
HW_Web_13_Reset_password_FastAPI_with_forfot_password/: README.md
HW_Web_13_Reset_password_FastAPI_with_forfot_password/postgres-data/global/: pg_control
HW_Web_13_Reset_password_FastAPI_with_forfot_password/postgres-data/pg_xact/: 0000
HW_Web_13_Reset_password_FastAPI_with_forfot_password/src/: schemas.py
HW_Web_14_FastAPI_deploy/: README.md  main.py  requirements.txt
HW_Web_2_extra/: Web HW_2 v.2.py  Web HW_2 v.3.py  Web HW_2.py
HW_Web_3/: pyproject.toml
HW_Web_3/part_1_file_sorter/: main.py
HW_Web_4/: app.py  pyproject.toml
HW_Web_4/storage/: data.json
HW_Web_5/: README.md  exchanger.py  pyproject.toml  reqirements.txt
HW_Web_5/chat/: chat.py
HW_Web_6_Postgres/: postgress_connector.py  pyproject.toml  reqirements.txt  seeds.py
HW_Web_6_SQLite/: create_db.py  fill_data.py  pyproject.toml  queries.txt  query.txt  query_1.sql.py  query_10.sql.py  query_11.sql.py  query_12.sql.py  query_2.sql.py  query_3.sql.py  query_4.sql.py  query_5.sql.py  query_6.sql.py  query_7.sql.py  query_8.sql.py  query_9.sql.py  university.db  university.sql
HW_Web_7_alembic/: README.md  pyproject.toml  reqirements.txt
HW_Web_7_alembic/database/: db.py
HW_Web_7_alembic/queries/: SQL_compare_ORM.sql
HW_Web_7_bad/: config.ini  just_sample.py  main  pyproject.toml  sqlalchemy_example.db
HW_Web_7_bad/alembic/: env.py
HW_Web_7_bad/alembic/versions/: 94056b77f672_init.py
HW_Web_7_bad/database/: models.py  models_sample.py
HW_Web_7_bad/seeds/: relationship.py  seeds.py  students.py  teachers.py
HW_Web_8_mongo_redis_rabbit/: README.md  pyproject.toml
HW_Web_8_mongo_redis_rabbit/explanations/: config.ini  connect.py  main.py  pymongo_test.py  seeds.py
HW_Web_8_mongo_redis_rabbit/hw_first_part/: models.py  seeds.py
HW_Web_8_mongo_redis_rabbit/hw_second_part/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py
HW_Web_9_scrapping/: .gitignore  README.md  pyproject.toml
HW_Web_9_scrapping/scrapy/: authors.json
(+44 files in other folders)
