[tool.poetry]
name = "hw-web-5"
version = "0.1.0"
description = ""
authors = ["PIRomanCod <111997187+PIRomanCod@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_web_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
websockets = "^10.4"
names = "^0.3.0"
aiofile = "^3.8.1"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
