[tool.poetry]
name = "hw-web-7"
version = "0.1.0"
description = ""
authors = ["PIRomanCod <111997187+PIRomanCod@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_web_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
